updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "he-tree-react",
+  "name": "@vse/he-tree-react",
   "version": "1.1.4",
   "license": "MIT",
   "author": "phphe <phphe@outlook.com> (https://github.com/phphe)",
